--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@vue/babel-preset-jsx": "^1.1.2",
     "@vue/composition-api": "^0.5.0",
+    "lodash.debounce": "^4.0.8",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4"
   },
